Fix overflow popup width to display full content
- before this patch because of the fixed width of popup some level of big content items or you can say elements gets hiddedn on screen
- this will fix the issue and make sure all the content gets visible and for overflow condition we will add scroll bar

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -124,6 +124,7 @@
 
 .top-row-overflow-group {
 	display: flex;
+	max-width: 498px;
 }
 /* overflow menu */
 .ui-overflow-group-popup {
